# hls_optimizer

./: .gitignore  CMakeLists.txt  ba.cpp  ba.txt  edge.h  help.h  matrix.cpp  matrix.h  matrix.h_backup  problem.h  test.cpp  test_ba.txt  vertex.h
least_square/: CMakeLists.txt  edge_reprojection.cc  edge_reprojection.h  least_square2_main.cc  least_square_main.cc  test_ba_main.cc
least_square/backend/: CMakeLists.txt  edge.cc  edge.h  eigen_types.hpp  problem.h  vertex.cc  vertex.h
least_square/fpm/: fixed.hpp
least_square/include/: common.h
